<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.samyak.nooops.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_categories"
        android:name="com.samyak.nooops.ui.category.CategoryFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.samyak.nooops.ui.cart.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" />
        
    <fragment
        android:id="@+id/navigation_wishlist"
        android:name="com.samyak.nooops.ui.wishlist.WishlistFragment"
        android:label="@string/wishlist"
        tools:layout="@layout/fragment_wishlist" />
        
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.samyak.nooops.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
        
    <fragment
        android:id="@+id/navigation_product_detail"
        android:name="com.samyak.nooops.ui.product.ProductDetailFragment"
        android:label="@string/product_details"
        tools:layout="@layout/fragment_product_detail">
        <argument
            android:name="productId"
            app:argType="string"
            app:nullable="false" />
    </fragment>
        
</navigation> 