<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".ui.wishlist.WishlistFragment">

    <!-- Header -->
    <TextView
        android:id="@+id/wishlist_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/margin_medium"
        android:text="@string/my_wishlist"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_title"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Wishlist Content -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/wishlist_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="@dimen/margin_small"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        app:layout_constraintTop_toBottomOf="@id/wishlist_header"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_wishlist" />

    <!-- Empty Wishlist State -->
    <LinearLayout
        android:id="@+id/empty_wishlist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/wishlist_header"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_wishlist"
            android:contentDescription="@string/wishlist_empty" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/wishlist_empty"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_large" />

        <Button
            android:id="@+id/start_shopping_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/start_shopping"
            android:textAllCaps="false" />
    </LinearLayout>

    <!-- Loading Indicator -->
    <ProgressBar
        android:id="@+id/loading_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout> 